usagov-1896-error-fix: address bug with gap showing on mobile error

--- a/web/themes/custom/usagov/sass/_benefit-search.scss
+++ b/web/themes/custom/usagov/sass/_benefit-search.scss
@@ -144,16 +144,9 @@ main[data-pagetype="Benefits Category Search"]{
     padding-bottom: 0.5rem;
 
     &.end-mobile-column {
-      padding-bottom: 0;
       @include at-media('tablet-lg') {
         padding-bottom: 0.5rem;
       }
-    }
-  }
-
-  &.end-desktop-column {
-    @include at-media('tablet-lg') {
-      padding-bottom: 0;
     }
   }
 }
